--- a/files/index.html
+++ b/files/index.html
@@ -8,16 +8,23 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Tabela para Excel</h1>
-    <div>
+    <div class="titulo">
+        <h1>Tabela para Excel</h1>
+    </div>
+    <div class="inputs">
         <input type="text" id="nome" placeholder="Insira uma descrição">
         <input type="number" id="valor" placeholder="Insira o valor do produto">
         <input type="number" id="quantidade" placeholder="Insira a quantidade">
     </div>
     <br>
-    <div>
+    <div class="botao">
         <button onclick="adicionarItem()">Adicionar a tabela📉📈</button>
     </div>
     <br>
@@ -30,14 +37,19 @@
                     <th>Quantidade</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="bodyDaTabela">
                 
             </tbody>
         </table>
     </div>
     <br>
     <div>
-        <button onclick="exportarParaExcel()">Exportar para Excel ✔</button>
+        <input type="text" id="nomeRemover" placeholder="Nome para remover">
+        <button onclick="removerItem()" >Remover ❌</button>
+    </div>
+    <br>
+    <div class="botao">
+        <button onclick="exportarParaExcel()" >Exportar para Excel ✔</button>
     </div>
 
 </body>
